Fixed citation Hacke 1963
s/b Hacke 1963–64; fixed globally

--- a/content/3-open-questions/21.md
+++ b/content/3-open-questions/21.md
@@ -32,7 +32,7 @@ In his paper Mehra, proposed eight basic requirements for linings. [Table 21.1](
 
 {% figure 'table-21-1' %}
 
-This paper was presented at the 2019 Conserving Canvas Symposium held at the Institute for the Preservation of Cultural Heritage at Yale University.[^2] The symposium title, Conserving Canvas, echoes the core of the discussions around Mehra’s paper. Mehra, in the Netherlands, and Bent Hacke ({% cite 'Hacke 1963' %}), in Denmark, became advocates for treatment strategies that were designed treat one problem at a time rather than the complete range of problems in a painting at once. Problems related to the canvas were now seen as a separate part of the canvas painting, and the treatments proposed (nap bond in The Netherlands and lamination in Denmark) were designed to deal with this layer. The ideas behind this concept of separation were presented in Mehra’s paper ({% cite 'Mehra 1972' %}), where he warned against the long-held tradition of linings impregnating the structure. In this paper the specific requirements written by Mehra are discussed in a contemporary context.
+This paper was presented at the 2019 Conserving Canvas Symposium held at the Institute for the Preservation of Cultural Heritage at Yale University.[^2] The symposium title, Conserving Canvas, echoes the core of the discussions around Mehra’s paper. Mehra, in the Netherlands, and Bent Hacke ({% cite 'Hacke 1963–64' %}), in Denmark, became advocates for treatment strategies that were designed treat one problem at a time rather than the complete range of problems in a painting at once. Problems related to the canvas were now seen as a separate part of the canvas painting, and the treatments proposed (nap bond in The Netherlands and lamination in Denmark) were designed to deal with this layer. The ideas behind this concept of separation were presented in Mehra’s paper ({% cite 'Mehra 1972' %}), where he warned against the long-held tradition of linings impregnating the structure. In this paper the specific requirements written by Mehra are discussed in a contemporary context.
 
 ### Reversibility
 
