--- a/content/8-posters/48.md
+++ b/content/8-posters/48.md
@@ -26,9 +26,9 @@ abstract: "The paper presents the results of the case study in which a solvent p
 
 ## Introduction
 
-The application of wax and wax-resin materials was a common practice in conservation and restoration in Russia from the nineteenth century until the last quarter of the twentieth. Due to their high stability and availability, these materials were used for a wide range of operations: lining, strip-lining, tear mending, and consolidation of ground and paint layer. Wax-resin lining began to be used in Russia from the mid-twentieth century ({% cite 'Gorin and Cherkasova 1977' '113' %}).
+The application of wax and wax-resin materials was a common practice in conservation and restoration in Russia from the nineteenth century until the last quarter of the twentieth. Due to their high stability and availability, these materials were used for a wide range of operations: lining, strip-lining, tear mending, and consolidation of ground and paint layer. Wax-resin lining began to be used in Russia from the mid-twentieth century ({% cite 'Gorin and Tcherkasova 1977' '113' %}).
 
-The main reasons for using wax and wax-resin compositions for consolidation were interlayer cleavage, flaking of the paint layer from oil ground, previous restoration with wax-resin, the deterioration of paintings caused by mildew or heat, and the like ({% cite 'Gorin and Cherkasova 1977' '110' %}). Nonetheless, the authors of Russian manuals on restoration mentioned the negative consequences of using wax-resin adhesives that had been observed. For example, *The Restoration of Easel Oil Paintings* states, “Wax-resin composition has a number of negative properties for lining. Impregnating porous chalk grounds, it changes the general tone of the painting towards darkening, especially in the light areas of the picture. During lining the wax-resin composition impregnates the author’s canvas and practically cannot be removed from the picture. It destroys the hygroscopic properties of the canvas, which are necessary for correcting canvas deformations, the picture loses its elasticity, becomes firm and heavy.” ({% cite 'Gorin and Cherkasova 1977' '129' %}).
+The main reasons for using wax and wax-resin compositions for consolidation were interlayer cleavage, flaking of the paint layer from oil ground, previous restoration with wax-resin, the deterioration of paintings caused by mildew or heat, and the like ({% cite 'Gorin and Cherkasova 1977' '110' %}). Nonetheless, the authors of Russian manuals on restoration mentioned the negative consequences of using wax-resin adhesives that had been observed. For example, *The Restoration of Easel Oil Paintings* states, “Wax-resin composition has a number of negative properties for lining. Impregnating porous chalk grounds, it changes the general tone of the painting towards darkening, especially in the light areas of the picture. During lining the wax-resin composition impregnates the author’s canvas and practically cannot be removed from the picture. It destroys the hygroscopic properties of the canvas, which are necessary for correcting canvas deformations, the picture loses its elasticity, becomes firm and heavy.” ({% cite 'Gorin and Tcherkasova 1977' '129' %}).
 
 After the negative effects of wax and wax-resin impregnation of canvas paintings were scientifically proven and presented by Gustav Berger and Harold Zeliger in 1975, the application of these materials by Russian conservators came to be limited, primarily performed only for the consolidation of murals made in oil technique ({% cite 'Fedoseeva 1999' '24–36' %}).
 
