Minor correx to 8 and 9

--- a/content/2-present-practice/8.md
+++ b/content/2-present-practice/8.md
@@ -130,7 +130,7 @@ The treatment did much to improve the surface appearance of the painting by remo
 
 ## Acknowledgments
 
-The National Gallery is grateful to the Getty Foundation for its generous support of the relining of the Van Dyck, which enabled the participation of seven conservators from the UK and abroad. Thanks are also due to the participants: Gerrit Albertson (Metropolitan Museum, New York), Francesca Bettini (Opificio delle Pietre Dure, Florence), Eva and Lucia Martinez (Museo del Prado, Madrid), Luigi Orata (private conservator, Florence), Camille Polkownik (Hamilton Kerr Institute, Cambridge), and Lisette Vos (Rijksmuseum, Amsterdam), and all my colleagues in the Conservation Department who assisted at various times throughout the project, particularly Lynne Harrison and Juraj Grac.
+The National Gallery is grateful to the Getty Foundation for its generous support of the relining of the Van Dyck, which enabled the participation of seven conservators from the United Kingdom and abroad. Thanks are also due to the participants: Gerrit Albertson (Metropolitan Museum, New York), Francesca Bettini (Opificio delle Pietre Dure, Florence), Eva and Lucia Martinez (Museo del Prado, Madrid), Luigi Orata (private conservator, Florence), Camille Polkownik (Hamilton Kerr Institute, Cambridge), and Lisette Vos (Rijksmuseum, Amsterdam), and all my colleagues in the Conservation Department who assisted at various times throughout the project, particularly Lynne Harrison and Juraj Grac.
 
 ## Appendix: Treatment Details
 
