--- a/content/2-present-practice/9.md
+++ b/content/2-present-practice/9.md
@@ -52,7 +52,7 @@ These aspects of the system remain open to debate. No complete scientific study 
 
 ## The Mist-Lining Process
 
-As mentioned, the mist-lining technique uses an acrylic dispersion resin sprayed onto a prepared auxiliary textile support. The result is an open network, rather than a continuous layer of adhesive, which is allowed to dry on application. After the lining canvas is placed in position, the adhesive can be regenerated insitu with solvent vapors. Bonding occurs under low pressure without the use of heat or moisture. The system effects a nap-bond with no impregnation of the original textile or migration into the decorative layers. This aids reversibility and avoids any change in appearance. Delining can be effected by applying peel forces (sometimes after solvent exposure) with little or no adhesive remaining attached to the original textile.
+As mentioned, the mist-lining technique uses an acrylic dispersion resin sprayed onto a prepared auxiliary textile support. The result is an open network, rather than a continuous layer of adhesive, which is allowed to dry on application. After the lining canvas is placed in position, the adhesive can be regenerated in situ with solvent vapors. Bonding occurs under low pressure without the use of heat or moisture. The system effects a nap-bond with no impregnation of the original textile or migration into the decorative layers. This aids reversibility and avoids any change in appearance. Delining can be effected by applying peel forces (sometimes after solvent exposure) with little or no adhesive remaining attached to the original textile.
 
 The technique requires little equipment and is easy to set up in the studio or on site. The low-pressure envelope can easily be adapted to accommodate paintings of different sizes or orientations (horizontal or vertical). Linings have been effectively implemented on all sizes of paintings, including large, oversize formats.[^3] Low-pressure tables can also be used, if a flatter lining surface is needed. Furthermore, the adhesive mixture and application process can be applied to effect strip-linings if a full lining is not desirable.
 
@@ -178,7 +178,7 @@ The idea that the original canvas will never be the same again after a lining is
 
 [^4]: Email correspondence between Kate Seymour and Thomas Bernhofer, technical service manager, Coatings, SBU Functional Solutions, Synthomer, March 28, 2018. See also http://www.synthomer.com.
 
-[^5]: Until recently, tests at SRAL have been empirical in nature, conducted on mock-ups or historical material (such as old, removed lining canvases or deaccessioned paintings). The lining process and specifications have been adjusted and tested for specific cases. Samples were analyzed between 2014 and 2017 by Dr. J. A. (Hans) Poulis (director of the Adhesion Institute, TU Delft) and a team of interns at TU Delft, Aerospace Division as well as students from the University of Amsterdam as part of master’s thesis research. See {% cite 'Seymour, Poulis, and Mosleh 2020' %}.
+[^5]: Until recently, tests at SRAL have been empirical in nature, conducted on mock-ups or historical material (such as old, removed lining canvases or deaccessioned paintings). The lining process and specifications have been adjusted and tested for specific cases. Samples were analyzed between 2014 and 2017 by Dr. J. A. (Hans) Poulis (director of the Adhesion Institute, TU Delft) and a team of interns at TU Delft, Aerospace Division as well as students from the University of Amsterdam as part of master’s thesis research. See {% cite 'Poulis, Seymour, and Mosleh 2020' %}.
 
 [^6]: The toxicity of the solvents can also be considered. Personal protective equipment (PPE) can be used to safely work with toxic solvents. Environmental factors and sustainability issues may also influence solvent selection.
 
