--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -83,7 +83,7 @@ All the cuts, tears, and holes (more than two hundred) were mended thread by thr
 
 With the first steps of consolidation, tear mending, and humidification complete, we evaluated if lining was necessary. A series of elements, such as the dimension of the canvas in relation to its ability to support itself, the presence of more than two hundred structural damages, the advanced degradation of the cellulose, and the presence of four horizontal seams, led us to the decision to apply an auxiliary support. As mentioned, every case is unique, and sometimes it is appropriate to assess the use of different methods and materials for lining.
 
-Glue-paste lining did not seem suitable, not only because it would increase the weight of the whole structure, but also (mostly) due to the difficulty in maintaining the appearance of the painted surface, preventing the seams’ stitches from impressing on the front, and preserving the original seams ({% cite 'Lavorini 2007' %}). Lining with Beva 371 was also disregarded due to the evaporation of a large amount of solvent (such as toluene) during the operation. Cold-lining, using the Mehra system ({% cite 'Mehra 1981 %}), was just as risky for the large amount of butyl acetate (or similar solvent) needed to reactivate Plextol.[^17] Using a thermoplastic adhesive in aqueous dispersion appeared to be a good solution to avoid the use of a fair amount of solvent, with its attendant risks of toxicity and fire.
+Glue-paste lining did not seem suitable, not only because it would increase the weight of the whole structure, but also (mostly) due to the difficulty in maintaining the appearance of the painted surface, preventing the seams’ stitches from impressing on the front, and preserving the original seams ({% cite 'Lavorini 2007' %}). Lining with Beva 371 was also disregarded due to the evaporation of a large amount of solvent (such as toluene) during the operation. Cold-lining, using the Mehra system ({% cite 'Mehra 1981' %}), was just as risky for the large amount of butyl acetate (or similar solvent) needed to reactivate Plextol.[^17] Using a thermoplastic adhesive in aqueous dispersion appeared to be a good solution to avoid the use of a fair amount of solvent, with its attendant risks of toxicity and fire.
 
 A study focused on testing different adhesives obtained by mixing Plextol B500 and Dispersion K360,[^18] in different proportions, was carried out to obtain a final mixture to be reactivated by heating. Empirical tests were performed to define the approximate reactivation temperature and the reversibility of each mixture ({% cite 'Orata and Capellaro 2013' %}, 57–66) in order to identify the one that would better fit the features and conservative conditions of the painting ([table 11.2](#table-11-2)). The possibility of matching specific needs makes this acrylic-based class of adhesives very advantageous in devising innovative solutions.
 
