--- a/content/2-present-practice/14.md
+++ b/content/2-present-practice/14.md
@@ -68,13 +68,13 @@ We do not know why the cleaning of Salvator Rosa’s *Battle of the Romans* (164
 
 The painting was stored for more than fifty years until research by Gudrun Swoboda, alongside ongoing attempts to improve the condition of all stored paintings, suggested a reevaluation. Its condition was compromised: the painted surface comprised overpaints, overcleaned areas, and structural problems, including flaking paint layers that were partially covered with paper facings, and fragile tacking edges from earlier (now inactive) insect infestations.[^15]
 
-The thick glue layers of linings dating to around 1900 had provided attractive breeding grounds for *Stegobium paniceum*, which likes to lay its eggs in the narrow, dark, sheltered space between stretcher and canvas, where its larvae can remain hidden. These beetles had damaged the edges of Rosa’s composition so badly that only some areas remained attached to the stretcher. Removal of the stretcher revealed the extent of the infestation: large areas beneath the stretcher were eaten, and most of the lining canvas had degraded to fibers and powder ([fig. 14.4](#fig-14-4)). Lining in unaffected areas, however, remained firmly attached. The original canvas, where visible, appeared quite thinned—probably it had been scraped down prior to the lining, to obtain a “clean” surface.
+The thick glue layers of linings dating to around 1900 had provided attractive breeding grounds for *Stegobium paniceum*, which likes to lay its eggs in the narrow, dark, sheltered space between stretcher and canvas, where its larvae can remain hidden. These beetles had damaged the edges of Rosa’s composition so badly that only some areas remained attached to the stretcher. Removal of the stretcher revealed the extent of the infestation: large areas beneath the stretcher were eaten, and most of the lining canvas had degraded to fibers and powder ([fig. 14.4](#fig-14-4)). Lining in unaffected areas, however, remained firmly attached. The original canvas, where visible, appeared quite thinned—probably it had been scraped down prior to the lining to obtain a “clean” surface.
 
 {% figure 'fig-14-4' %}
 
 We decided to attempt a partial treatment rather than a complete removal of the lining, removing only the eaten areas of the old lining and replacing them with a new strip-lining in order to safely restretch the painting. Removing the entire lining, with its strong adhesion and massive glue layer, would have stressed the original canvas and paint layers and would have required a new lining.
 
-We used a semisolid gel of agar to remove the lining glue along the damaged edges, which peeled off with the old glue embedded. Remnants of glue on the canvas were removed mechanically with a scalpel. We chose acrylic emulsion Lascaux 498-HV as the adhesive. The fringes of the strip-lining were later attached atop the old lining using wheat starch with rabbit skin glue and pressure. Once cleaning and restoration are completed, we hope to install the painting in the gallery.
+We used a semisolid gel of agar to remove the lining glue along the damaged edges, which peeled off with the old glue embedded. Remnants of glue on the canvas were removed mechanically with a scalpel. We chose acrylic emulsion Lascaux 498-HV as the adhesive. The fringes of the strip-lining were later attached atop the old lining using wheat starch with rabbit-skin glue and pressure. Once cleaning and restoration are completed, we hope to install the painting in the gallery.
 
 ## Johann Franz Greippel’s *Four Daughters of Maria Theresia Performing the Opera* Parnasso Confuso *by Christoph Willibald Gluck in 1765*: In Situ Treatment of Two Large Canvases Lined Around 1900
 
@@ -112,7 +112,7 @@ Unlined seventeenth-century paintings are rare and the still life’s surface te
 
 To begin, we removed the painting from the strainer and examined the various interventions and format changes (see [fig. 14.6](#fig-14-6)). In addition to the painting’s reduced width mentioned above, its height had been extended by the addition of two strips of canvas.[^25]
 
-Because the painting is listed in the archduke’s inventory, this gave us a contemporary record of its original size, although this includes the frame.[^26] The canvas scalloping and other key features, such as the selvages within the original seam (presumably once in the center) as well as on the left edge, and the black paint covering the unpainted canvas at the left edge provided evidence of its original format. Our research also suggested that the top extensions were later additions. This and the size recorded in the inventory allowed a conclusive reconstruction of the original, and we decided to reestablish this format.
+Because the painting is listed in the archduke’s inventory, this gave us a contemporary record of its original size, although this includes the frame.[^26] The canvas scalloping and other key features, such as the selvages within the original seam (presumably once in the center) as well as on the left edge and the black paint covering the unpainted canvas at the left edge provided evidence of its original format. Our research also suggested that the top extensions were later additions. This and the size recorded in the inventory allowed a conclusive reconstruction of the original, and we decided to reestablish this format.
 
 To flatten the deformations, the canvas was treated with indirect humidity.[^27] The most labor-intensive interventions were thread-by-thread tear mending and thread-by-thread inserting (and weaving) new threads to reconstruct the losses of original canvas ([fig. 14.7](#fig-14-7)).[^28] The open areas in the original seam were connected with stitches or bridges from the reverse.[^29] The strip-lining with a new natural Belgian canvas, prepared by fringing and coated with a layer of self-made Beva film, was then sealed to the original canvas.
 
